Add question table, form

--- a/src/app/components/book/book/book.component.html
+++ b/src/app/components/book/book/book.component.html
@@ -2,7 +2,7 @@
   <a mat-raised-button color="primary" [routerLink]="['/book-create']"><mat-icon>add</mat-icon></a>
 </div>
 <div class="example-container mat-elevation-z8">
-  <table mat-table #table [dataSource]="dataSource">
+  <table mat-table #table [dataSource]="dataSource" class="example-full-width">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
