--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -12,6 +12,7 @@
       <a mat-list-item routerLink="student"><i class="material-icons">list</i> Student</a>
       <a mat-list-item routerLink="login"><i class="material-icons">home</i> Login</a>
       <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a>
+      <a mat-list-item routerLink="questions"><i class="material-icons">home</i> Question</a>
 
     </mat-nav-list>
   </mat-sidenav>
@@ -26,7 +27,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
 
-      <span>GameViewer</span>
+      <span>Student Interaction</span>
         <span class="spacer"></span>
         <button mat-icon-button [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
@@ -48,6 +49,8 @@
       
     </mat-toolbar>
     <!-- Add Content Here -->
-    <router-outlet></router-outlet>
+    <div class="padding">
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
