--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -9,10 +9,10 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="faculty"><i class="material-icons">supervised_user_circle</i> Faculty</a>
-      <a mat-list-item routerLink="student"><i class="material-icons">list</i> Student</a>
-      <a mat-list-item routerLink="login"><i class="material-icons">home</i> Login</a>
+      <a mat-list-item routerLink="student"><i class="material-icons">school</i> Student</a>
+      <a mat-list-item routerLink="login"><i class="material-icons">fingerprint</i> Login</a>
       <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a>
-      <a mat-list-item routerLink="questions"><i class="material-icons">home</i> Question</a>
+      <a mat-list-item routerLink="questions"><i class="material-icons">question_answer</i> Question</a>
 
     </mat-nav-list>
   </mat-sidenav>
