--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,7 +30,7 @@
 	  </mat-card-content>
 	  <mat-card-actions>
 	    <button mat-button>T&C</button>
-	    <button mat-button>SIGNUP</button>
+	    <button mat-button [routerLink]="['/signup']">SIGNUP</button>
 	  </mat-card-actions>
 	</mat-card>
 
