--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -14,6 +14,7 @@
       <a mat-list-item routerLink="login"><i class="material-icons">fingerprint</i> Login</a>
       <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a>
       <a mat-list-item routerLink="questions"><i class="material-icons">question_answer</i> Question</a>
+      <a mat-list-item routerLink="chat"><i class="material-icons">chat</i> Chat</a>
 
     </mat-nav-list>
   </mat-sidenav>
