--- a/src/app/components/question/question/question.component.html
+++ b/src/app/components/question/question/question.component.html
@@ -8,9 +8,9 @@
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Title Column -->
-    <ng-container matColumnDef="question">
+    <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Question </th>
-      <td mat-cell *matCellDef="let element" class="isbn-col"> {{element.question}} </td>
+      <td mat-cell *matCellDef="let element" class="isbn-col"> {{element.name}} </td>
     </ng-container>
 
     <!-- Title Column -->
