Add Chat Application with Socket.Io

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -21,7 +21,6 @@
     overflow: auto;
     position: fixed;
     top: 90px;
-    left: 25px;
     right: 25px;
     bottom: 120px;
 }
@@ -39,6 +38,7 @@
 
 .chat-footer-container {
     position:fixed;
+    width: 100%;
     bottom:25px;
 
 }
