--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -4,7 +4,7 @@
 <div class="chat-container">
   <mat-card class="main-card">
     <mat-list class="chat-list">
-      <mat-list-item *ngFor="let message of messages" [ngClass]="[(message.action === undefined && message.from.id === user.id)? 'chat-list-item': '']">
+      <mat-list-item *ngFor="let message of messages" class="chat-list-item" >
         <img mat-list-avatar *ngIf="message.action === undefined" [src]="message.from.avatar">
         <h4 mat-line *ngIf="message.action === undefined">
           <b>{{message.from.name}}</b>
