UI Fix of chat message like WhatsApp

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,99 +1,58 @@
-<div class="containern">
-  <!-- <mat-sidenav mode="side" opened>
-    <mat-card>
-      <mat-tab-group>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon matListIcon>forum</mat-icon>
-          </ng-template>
-          <button mat-fab class="create-conversation" (click)="createConversation()">
-            <mat-icon aria-label="Create Conversation">add</mat-icon>
-          </button>
-          <mat-list class="conversations">
-            <mat-list-item *ngFor="let conversation of conversations" (click)="selectConversation(conversation.id)">
-              <mat-icon matListIcon>forum</mat-icon>
-              <p>conversation.display_name</p>
-            </mat-list-item>
-          </mat-list>
-          <hr class="divider">
-          <mat-list class="all-conversations">
-            <mat-list-item *ngFor="let conversation of allConversations" (click)="selectAndJoinConversation(conversation.uuid)">
-              <mat-icon matListIcon>forum</mat-icon>
-              <p>conversation.display_name</p>
-            </mat-list-item>
-          </mat-list>
-        </mat-tab>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon matListIcon>account_circle</mat-icon>
-          </ng-template>
-          <mat-list>
-            <mat-list-item *ngFor="let user of users">
-              <mat-icon matListIcon>account_circle</mat-icon>
-              <p>user.name</p>
-            </mat-list-item>
-          </mat-list>
-        </mat-tab>
-      </mat-tab-group>
-    </mat-card>
-  </mat-sidenav> -->
-  <!-- <mat-sidenav position="end" mode="side" opened *ngIf="selectedConversation">
-    <mat-card>
-      <mat-list>
-        <mat-list-item *ngFor="let member of selectedConversation.members">
-          <img matListAvatar src="https://randomuser.me/api/portraits/thumb/nameToImage(member.value.id).prefixmen/nameToImage(member.value.id).index.jpg"
-          />
-          <p>member.value.user.name</p>
-        </mat-list-item>
-      </mat-list>
-    </mat-card>
-  </mat-sidenav> -->
-  <!-- <section class="empty-conversation" *ngIf="selectedConversation">
-    <h1 class="mat-display-1">Select a conversation from the left to start chatting</h1>
-  </section> -->
-  
-    <section *ngIf="true">
-      <div class="mat-typography conversation-header">
-        <h2>
-          <mat-icon>forum</mat-icon>
-          selectedConversation.display_name</h2>
-        <p>
-          <mat-icon>account_circle</mat-icon>
-          (selectedConversation.members | keys).length Members</p>
-      </div>
 
-      <mat-divider></mat-divider>
-      <mat-list dense class="conversation-history mat-typography">
-        <mat-list-item *ngFor="let message of messages" [dir]="message.from.userId === loginUser._id ? 'rtl' : 'ltr'" >
-          <img mat-list-avatar *ngIf="message.action === undefined" [src]="message.from.avatar">
-          <h4 *ngIf="message.action === undefined">
-            <b>{{message.from.name}}</b>
-          </h4>
-          <p class="right" *ngIf="message.action === undefined" [dir]="'ltr'">
-            <span> {{message.content}} </span>
-          </p>
-          <p mat-line *ngIf="message.action === action.JOINED" class="chat-notification">
-            <span> <b>{{message.from.name}}</b> joined to the conversation. </span>
-          </p>
-          <p mat-line *ngIf="message.action === action.RENAME" class="chat-notification">
-            <span> <b>{{message.content.previousUsername}}</b> is now <b>{{message.content.username}}</b> </span>
-          </p>
-        </mat-list-item>
-      </mat-list>
+    <div class="conversation">
+      
+        <section *ngIf="true">
+          <div class="mat-typography conversation-header">
+            <h2>
+              <mat-icon>forum</mat-icon>
+              selectedConversation.display_name</h2>
+            <p>
+              <mat-icon>account_circle</mat-icon>
+              (selectedConversation.members | keys).length Members</p>
+          </div>
 
-      <div class="conversation-input">
-        <mat-divider></mat-divider>
-        <mat-form-field class="full-width">
-          <!-- <input matInput placeholder="Start chatting..." name="text" [(ngModel)]="text"> -->
-          <input matInput 
-                 #inputMessage 
-                 maxlength="640" 
-                 placeholder="Type your message" 
-                 [(ngModel)]="messageContent" 
-                 (keyup.enter)="sendMessage(messageContent)">
-          <mat-hint align="end">{{inputMessage.value.length}}/640</mat-hint>
-          <mat-icon matSuffix (click)="sendMessage(messageContent)">send</mat-icon>
-        </mat-form-field>
-      </div>
-    </section>
-</div>
+          <mat-divider></mat-divider>
+          
+          <mat-list dense class="conversation-history mat-typography">
+            <div class="conversation-container">
+              <mat-list-item *ngFor="let message of messages" [class]="message.from.userId === loginUser._id ? 'message sent' : 'message received'" class="message sent">
+                <!-- <div class="avatar">
+                  <img mat-list-avatar *ngIf="message.action === undefined" [src]="message.from.avatar">
+                </div> -->
+                <h5 *ngIf="message.action === undefined"><b>{{message.from.name}}</b></h5>
+                <span *ngIf="message.action === undefined">
+                  {{message.content}}
+                </span>
+                <!-- {{message.content}} -->
+                <span class="metadata">
+                    <span class="time">2am</span>
+                    <span *ngIf="message.from.userId === loginUser._id" class="tick"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" id="msg-dblcheck-ack" x="2063" y="2076"><path d="M15.01 3.316l-.478-.372a.365.365 0 0 0-.51.063L8.666 9.88a.32.32 0 0 1-.484.032l-.358-.325a.32.32 0 0 0-.484.032l-.378.48a.418.418 0 0 0 .036.54l1.32 1.267a.32.32 0 0 0 .484-.034l6.272-8.048a.366.366 0 0 0-.064-.512zm-4.1 0l-.478-.372a.365.365 0 0 0-.51.063L4.566 9.88a.32.32 0 0 1-.484.032L1.892 7.77a.366.366 0 0 0-.516.005l-.423.433a.364.364 0 0 0 .006.514l3.255 3.185a.32.32 0 0 0 .484-.033l6.272-8.048a.365.365 0 0 0-.063-.51z" fill="#4fc3f7"/></svg></span>
+                </span>
+                <p mat-line *ngIf="message.action === action.JOINED" class="chat-notification">
+                  <span> <b>{{message.from.name}}</b> joined to the conversation. </span>
+                </p>
+                <p mat-line *ngIf="message.action === action.RENAME" class="chat-notification">
+                  <span> <b>{{message.content.previousUsername}}</b> is now <b>{{message.content.username}}</b> </span>
+                </p>
+              </mat-list-item>
+            </div>
+            
+          </mat-list>
+
+          <div class="conversation-input">
+            <mat-divider></mat-divider>
+            <mat-form-field class="full-width">
+              <!-- <input matInput placeholder="Start chatting..." name="text" [(ngModel)]="text"> -->
+              <input matInput 
+                     #inputMessage 
+                     maxlength="640" 
+                     placeholder="Type your message" 
+                     [(ngModel)]="messageContent" 
+                     (keyup.enter)="sendMessage(messageContent)">
+              <mat-hint align="end">{{inputMessage.value.length}}/640</mat-hint>
+              <mat-icon matSuffix (click)="sendMessage(messageContent)">send</mat-icon>
+            </mat-form-field>
+          </div>
+        </section>
+    </div>
+
