Add time in chat message and quiz question should come from databse

--- a/src/app/components/question/question-create/question-create.component.html
+++ b/src/app/components/question/question-create/question-create.component.html
@@ -16,9 +16,9 @@
 
 
           <mat-form-field class="half-width">
-              <input  matInput placeholder="Choice" formControlName="option" [errorStateMatcher]="matcher">
+              <input  matInput placeholder="Choice" formControlName="name" [errorStateMatcher]="matcher">
               <!-- <mat-error>
-                <span *ngIf="!questionForm.get('option').valid && questionForm.get('option').touched">Please enter Question Choice1</span>
+                <span *ngIf="!questionForm.get('name').valid && questionForm.get('name').touched">Please enter Question Choice1</span>
               </mat-error> -->
           </mat-form-field>
           
