--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -2,17 +2,17 @@
     <div class="conversation">
       
         <section *ngIf="true">
-          <div class="mat-typography conversation-header">
+          <!-- <div class="mat-typography conversation-header">
             <h2>
               <mat-icon>forum</mat-icon>
               selectedConversation.display_name</h2>
             <p>
               <mat-icon>account_circle</mat-icon>
               (selectedConversation.members | keys).length Members</p>
-          </div>
+          </div> -->
 
-          <mat-divider></mat-divider>
-          
+          <!-- <mat-divider></mat-divider> -->
+          {{ createdAt | date:'h:mm a'}}
           <mat-list dense class="conversation-history mat-typography">
             <div class="conversation-container">
               <mat-list-item *ngFor="let message of messages" [class]="message.from.userId === loginUser._id ? 'message sent' : 'message received'" class="message sent">
@@ -25,7 +25,7 @@
                 </span>
                 <!-- {{message.content}} -->
                 <span class="metadata">
-                    <span class="time">2am</span>
+                    <span class="time">{{ message.created_at | date:'h:mm a'}}</span>
                     <span *ngIf="message.from.userId === loginUser._id" class="tick"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" id="msg-dblcheck-ack" x="2063" y="2076"><path d="M15.01 3.316l-.478-.372a.365.365 0 0 0-.51.063L8.666 9.88a.32.32 0 0 1-.484.032l-.358-.325a.32.32 0 0 0-.484.032l-.378.48a.418.418 0 0 0 .036.54l1.32 1.267a.32.32 0 0 0 .484-.034l6.272-8.048a.366.366 0 0 0-.064-.512zm-4.1 0l-.478-.372a.365.365 0 0 0-.51.063L4.566 9.88a.32.32 0 0 1-.484.032L1.892 7.77a.366.366 0 0 0-.516.005l-.423.433a.364.364 0 0 0 .006.514l3.255 3.185a.32.32 0 0 0 .484-.033l6.272-8.048a.365.365 0 0 0-.063-.51z" fill="#4fc3f7"/></svg></span>
                 </span>
                 <p mat-line *ngIf="message.action === action.JOINED" class="chat-notification">
@@ -45,7 +45,7 @@
               <!-- <input matInput placeholder="Start chatting..." name="text" [(ngModel)]="text"> -->
               <input matInput 
                      #inputMessage 
-                     maxlength="640" 
+                     maxlength="1640" 
                      placeholder="Type your message" 
                      [(ngModel)]="messageContent" 
                      (keyup.enter)="sendMessage(messageContent)">
