--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -41,15 +41,15 @@
 }
 
 .conversation-history.mat-list {
-    height: calc(100% - 180px);
-    overflow-x: scroll;
+    height: calc(100% - 144px);
+    //overflow-x: scroll;
     position: absolute;
-    width: 96%;
-    background: #efe7dd url("https://cloud.githubusercontent.com/assets/398893/15136779/4e765036-1639-11e6-9201-67e728e86f39.jpg") repeat;
+    width: 98%;
+    background: #efe7dd url("https://i.pinimg.com/originals/a5/c2/44/a5c244761a4573da8dd2d55d66ee7b72.jpg") repeat;
     z-index: 0;
 }
 .conversation .conversation-container {
-  height: calc(100% - 68px);
+  height: 100%;
   box-shadow: inset 0 10px 10px -10px #000000;
   overflow-x: hidden;
   padding: 0 16px;
