--- a/src/app/components/quiz/quiz-edit/quiz-edit.component.scss
+++ b/src/app/components/quiz/quiz-edit/quiz-edit.component.scss
@@ -4,11 +4,11 @@
   width: 100%;
 }
 
-.example-full-width {
+.full-width {
   width: 100%;
 }
 
-.example-full-width:nth-last-child() {
+.full-width:nth-last-child() {
   margin-bottom: 10px;
 }
 
