--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -17,7 +17,7 @@
   <hr />
 
   <div *ngIf="mode=='quiz' && quiz">
-    {{filteredQuestions | json}}
+    {{quiz | json}}
     <div *ngFor="let question of filteredQuestions;">
       <div class="badge badge-info">Question {{pager.index + 1}} of {{pager.count}}.</div>
       <div *ngIf="config.duration" class="badge badge-info float-right">Time: {{ellapsedTime}} / {{duration}}</div>
