--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -55,7 +55,7 @@
     <div *ngFor="let question of quiz.questions; let index = index">
       <div class="result-question">
         <h5>{{index + 1}}. {{question.name}}</h5>
-        <div class="row">
+        <div class="row pl-3">
           <div class="col-md-6" *ngFor="let Option of question.options">
             <input id="{{Option.id}}" type="checkbox" disabled="disabled" [(ngModel)]="Option.selected" /> {{Option.name}}
           </div>
@@ -63,7 +63,7 @@
         <div class="p-1 m-2 alert {{ isCorrect(question) == 'correct'? 'alert-success': 'alert-danger'}}">Your answer is {{isCorrect(question)}}.</div>
       </div>
     </div>
-    <h4 class="alert alert-info text-center">You may close this window now.</h4>
+    <!-- <h4 class="alert alert-info text-center">You may close this window now.</h4> -->
   </div>
   <hr />
   <div *ngIf="mode!='result'">
