--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -8,13 +8,13 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="quiz"><i class="material-icons">timer</i> Quiz</a>
-      <a mat-list-item routerLink="quiz-create"><i class="material-icons">timer</i> Quiz Create</a>
-      <a mat-list-item routerLink="faculty"><i class="material-icons">supervised_user_circle</i> Faculty</a>
-      <a mat-list-item routerLink="student"><i class="material-icons">school</i> Student</a>
-      <a mat-list-item routerLink="login" *ngIf="!authService.isLoggedIn()"><i class="material-icons">fingerprint</i> Login</a>
-      <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a>
+      <a mat-list-item routerLink="quiz"><i class="material-icons">timer</i> Play</a>
+      <a mat-list-item routerLink="quizs"><i class="material-icons">timer</i> Quiz</a>
       <a mat-list-item routerLink="questions"><i class="material-icons">question_answer</i> Question</a>
+      <!-- <a mat-list-item routerLink="faculty"><i class="material-icons">supervised_user_circle</i> Faculty</a>
+      <a mat-list-item routerLink="student"><i class="material-icons">school</i> Student</a> -->
+      <a mat-list-item routerLink="login" *ngIf="!authService.isLoggedIn()"><i class="material-icons">fingerprint</i> Login</a>
+      <!-- <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a> -->
       <a mat-list-item routerLink="chat"><i class="material-icons">chat</i> Chat</a>
 
     </mat-nav-list>
