--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -56,8 +56,36 @@
       
     </mat-toolbar>
     <!-- Add Content Here -->
-    <div class="padding">
+    <div class="content">
       <router-outlet></router-outlet>
+    </div>
+    <div class="footer">
+      <mat-tab-group headerPosition="below" backgroundColor="primary">
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            First
+          </ng-template>
+          Content 1
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            Second
+          </ng-template>
+          Content 2
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            Third
+          </ng-template>
+
+          Content 3
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
