Add Option name in Answer Array

--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -59,7 +59,7 @@
     <div class="content">
       <router-outlet></router-outlet>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
       <mat-tab-group headerPosition="below" backgroundColor="primary">
         <mat-tab>
           <ng-template mat-tab-label>
@@ -86,6 +86,6 @@
           Content 3
         </mat-tab>
       </mat-tab-group>
-    </div>
+    </div> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
