--- a/src/app/components/quiz/quiz-detail/quiz-detail.component.html
+++ b/src/app/components/quiz/quiz-detail/quiz-detail.component.html
@@ -50,6 +50,9 @@
   <div class="col-md-4"><canvas id="canvas1"></canvas></div>
   <div class="col-md-4"><canvas id="canvas2"></canvas></div>
 </div>
+<div class="row">
+  <div class="col-md-12"><canvas id="bubbleCanvas"></canvas></div>
+</div>
 <div class="button-row">
   <button *ngFor="let result of quizResults; let index = index" mat-raised-button color="primary" matBadge="{{ result.correctAnswerCount }}" matBadgePosition="after" matBadgeColor="accent">
     {{ result.from.name }}
