--- a/src/app/components/quiz/quiz-list/quiz-list.component.html
+++ b/src/app/components/quiz/quiz-list/quiz-list.component.html
@@ -37,7 +37,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element"> 
-        jjj
+        Action
       </td>
     </ng-container>
 
